# echo

./: .env  .env.example  .gitignore  CHANGELOG.md  PROJECT_ECHO.md  README.md  SESSION_DUMP.md  pyproject.toml  start.sh
.serena/: project.yml
data/: mcp.json
docs/: README.md  architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
notes/: 2026-07-12_update-self-mod-docs.md  2026-07-12_update-self-mod-wiki.md  2026-07-13_update-self-mod-constraints.md  2026-07-13_update-self-mod-docs.md  2026-07-13_update-self-mod-protocol.md  2026-07-13_update-self-mod-validation-docs.md  2026-07-13_update-self-mod-wiki.md  2026-07-14_add-contributing-section.md  2026-07-14_update-self-mod-docs.md  2026-07-14_update-self-mod-wiki.md  2026-07-15_add-cron-tasks-section.md  2026-07-15_add-curiosity-engine-overview.md  2026-07-15_aggiungi-sezione-test.md  2026-07-15_enable-error-exit-start-sh.md  2026-07-15_self-modification-safety-warning.md  2026-07-16_add-cron-scheduler-section.md  2026-07-16_add-security-note-readme.md  2026-07-16_add-troubleshooting-note.md  2026-07-17_add-github-token-check.md  2026-07-17_add-mcp-url-warning.md  2026-07-17_add-telegram-token-warning.md  2026-07-18_add-cron-scheduler-note.md  2026-07-18_add-log-level-env-var.md  2026-07-18_add-openai-api-key-check.md  2026-07-18_add-telegram-chat-id-note.md  2026-07-19_add-curiosity-loop-section.md  2026-07-19_add-log-level-default.md  2026-07-19_add-log-level-description.md  2026-07-19_add-mcp-server-url-check.md  2026-07-19_add-telegram-bot-token-check.md  2026-07-20_add-ai-news-key.md  2026-07-20_add-curiosity-engine-summary.md  2026-07-20_add-self-mod-notes.md  (+25 more)
(+170 files in other folders)
