[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo"
version = "0.2.3"
description = "PROJECT ECHO — Persistent Self-Modifying Cognitive Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "openai>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "chromadb>=0.5.0",
    # Graph
    "networkx>=3.3",
    # Scheduling
    "apscheduler>=3.10.4",
    # Math / ML utilities
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    # Misc
    "httpx>=0.27.0",
    "tenacity>=8.4.2",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    # MCP client support
    "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
]

[project.scripts]
echo-server = "echo.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires LM Studio running at localhost:1234",
    "e2e: full end-to-end test",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
